fixed note overflow issue

--- a/style.css
+++ b/style.css
@@ -217,6 +217,8 @@ input:focus {
 .notes {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
+    padding: 0 50px;
 }
 
 .note {
